--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: java
 jdk:
   - oraclejdk8
+
+script:
+  - ./mvnw validate
+  - ./mvnw test -B
+  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
