removed mysql jdbc driver version

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Database -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 		<!-- Supporting components -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
