--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,18 @@
             <version>5.1.1</version>
         </dependency>
 
+        <!-- General Frameworks -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
+
         <!-- Unit Testing -->
         <dependency>
             <groupId>junit</groupId>
