--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-bus</artifactId>
-            <version>2.0.8.RELEASE</version>
-        </dependency>
-
         <!-- Database -->
         <dependency>
             <groupId>mysql</groupId>
@@ -93,6 +87,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.2</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.6.2</version>
         </dependency>
 
         <!-- Unit Testing -->
