- implemented event processing result functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
+# Redis settings
+importantcontacts.redis.hostname=${REDIS_HOSTNAME}
+importantcontacts.redis.port=${REDIS_PORT}
+importantcontacts.redis.password=${REDIS_PASSWORD}
