--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "important-contacts-service",
   "version": "0.0.1",
-  "description": "Contact Management for Open School Management",
+  "description": "Service for managing important contacts for school and classes",
   "main": "build/main.js",
   "scripts": {
     "build": "node_modules/.bin/tsc",
